fix-backdrop-nav-overlap

--- a/public/css/diags.design.css
+++ b/public/css/diags.design.css
@@ -1,5 +1,9 @@
 .cssfx {}
 
+.modal-backdrop{
+    z-index: 999040!important;
+}
+
 
 /*
 SMOTH
